cmake_minimum_required(VERSION 3.0)

project(advent_of_code_2019)

set (CMAKE_CXX_STANDARD 17)

add_subdirectory(01)
add_subdirectory(02)
add_subdirectory(03)
add_subdirectory(04)
add_subdirectory(05)
add_subdirectory(06)
add_subdirectory(07)
add_subdirectory(08)
add_subdirectory(09)
add_subdirectory(10)